added site title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Positon</title>
+    <title>CSS Positon Visual</title>
     
     <!-- Stylesheets -->
     <link rel="stylesheet" href="position.css">
@@ -14,6 +14,8 @@
     <!-- part - 01 -->
     <div class="container">
         <div>
+            <h1 class="title">CSS Position Visual</h1>
+
             <div class="selection-div">
                 <select id="child-select" >
                     <option selected value="">Select a child</option>
